2010-01-30  Andreas Schwab  <schwab@linux-m68k.org>

	* character.h (CHAR_PRINTABLE_P): Reparenthesize to avoid warning.

2010-01-29  Chong Yidong  <cyd@stupidchicken.com>

	* frame.c (DEFAULT_ROWS): Change default to 35.

	* xfns.c (x_default_font_parameter): Change default XFT font to
	monospace-10 (Bug#3643).

2010-01-29  Eli Zaretskii  <eliz@gnu.org>

	* w32inevt.c (key_event): Remove unnecessary comparison of
	event->uChar.AsciiChar with 128.

2010-01-28  Chong Yidong  <cyd@stupidchicken.com>

	* fileio.c (Frename_file): Fix last change (Bug#5487).

	* m/mips.h: Remove DATA_START.  Suggested by Dan Nicolaescu.

	* m/alpha.h: Don't define DATA_START on NetBSD (Bug#4629).

2010-01-28  Jan Djärv  <jan.h.d@swipnet.se>

	* xfns.c (Fx_create_frame): Remove window size matching code from
	2010-01-15.
	(x_get_current_desktop, x_get_desktop_workarea): Remove

2010-01-27  Jason Rumney  <jasonr@gnu.org>

	* w32inevt.c (w32_kbd_patch_key): Save the unicode character.
	(key_event): Use unicode for characters 128 and higher (Bug#4567).

2010-01-27  Kenichi Handa  <handa@m17n.org>

	* regex.c (analyse_first): Fix setting of fastmap for unibyte
	pattern string (Bug#4209).

2010-01-27  David De La Harpe Golden  <david@harpegolden.net>

	* fileio.c (Frename_file): Call copy-directory and
	delete-directory for directories, in order to handle cross-device
	renaming (Bug#3353).

2010-01-25  Jan Djärv  <jan.h.d@swipnet.se>

	* xfns.c (Fx_create_frame): If frame height is too big, try
	sizes 24 and 10. Bug #3643.

2010-01-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	Try and fix bug#788, hopefully for real this time.
	* keymap.c (shadow_lookup): Add `remap' arg.
	(describe_map, describe_vector): Update calls to shadow_lookup.
	(Fwhere_is_internal): Fix up handling of `remapped_sequences' and
	`remapped' so this flag is applicable to `sequence'.  Be careful to
	perform remapping during shadow_lookup check of remapped_sequences.
