@@ -1,3 +1,7 @@
+2010-01-31  Filipe Cabecinhas  <filcab@gmail.com>  (tiny change)
+
+	* nsterm.m (ns_ring_bell): Handle visible bell like X.
+
 2010-01-30  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* character.h (CHAR_PRINTABLE_P): Reparenthesize to avoid warning.
